testdata/err/string_literal_unterminated_unicode.err.txt
error: unterminated unicode escape sequence
- testdata/err/string_literal_unterminated_unicode.tn:1:18
1 | main = || { "foo \u{fffff x" };
  |                  ^^^^^^^^ unterminated unicode escape sequence
- testdata/err/string_literal_unterminated_unicode.tn:1:13
1 | main = || { "foo \u{fffff x" };
  |             ---------------- in this string literal
